<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="holder"
            type="com.o2.domain.model.Book" />

        <variable
            name="eventListener"
            type="com.o2.check_bookmark_android.ui.bookmarks.BookmarksActionHandler" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_lesson_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue_50"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_lesson_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_lesson_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/hoder_bookmark_title"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/tv_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/hoder_bookmark_mood"
                android:textColor="#FF000000"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

            <TextView
                android:id="@+id/tv_class_lesson_percent_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/holder_bookmark_read_page"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="@+id/tv_lesson_list_name"
                app:layout_constraintTop_toBottomOf="@id/tv_lesson_list_name"
                tools:ignore="HardcodedText" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>